kubernetes/apps/downloads/qbittorrent/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Envoy Gateway
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: envoy
              gateway.envoyproxy.io/owning-gateway-namespace: network
      ports:
        - port: &port 80
          protocol: TCP
    # autobrr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: autobrr
      ports:
        - port: *port
          protocol: TCP
    # cross-seed
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cross-seed
      ports:
        - port: *port
          protocol: TCP
    # kapowarr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: kapowarr
      ports:
        - port: *port
          protocol: TCP
    # mylar
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mylar
      ports:
        - port: *port
          protocol: TCP
    # prowlarr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: *port
          protocol: TCP
    # qui
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: qui
      ports:
        - port: *port
          protocol: TCP
    # radarr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports:
        - port: *port
          protocol: TCP
    # sonarr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports:
        - port: *port
          protocol: TCP
    # sonarr-uhd
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr-uhd
      ports:
        - port: *port
          protocol: TCP
    # tqm
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: tqm
      ports:
        - port: *port
          protocol: TCP

#######################################
#            EGRESS                   #
#######################################
  egress:
    # kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    # Internet
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
